0.1.2
Added expander to toolbar items.
Added configurable toolbar.
Fixed bug when loading session where file has weird characters in the name.

0.1.1
Fixed tool not apearing in popup if both popup options selected.
Fixed not creating new tool if ~/.KKEdit/tools folder doesn't exist.
Comments now appear as tooltips in the 'Tools' menu and the context menu.
Added optional comments to external tools.
Fixed crash when repeatedly deleting tools from the 'Manage External Tools' menu.
Added a couple of source view styles (one grey and one brown).
Added external tool to look up QT5 definition (docs must be in "/usr/share/doc/qt5" if not change the search directory in the tool),
works the same as 'Open Manpage' just select a define 'QWidget' forinstance and then select 'QT5 Search' from the tools or context menu.
Compacted the prefs dialog, and grouped the functions.
Fixedbug in tools where only the first use of a place holder was being set. 
Fixed bug in external tools where %h was not being set. 

0.1.0
Fixed restoring file name with spaces ( again! )
Redone save/restore session.
Bookmarks now toggled rather than added.
Added 'Toggle Bookmark' to context menu.
Can now change bookmark highlight colour.
Added bookmark icon.
Fixed double free bug in prefs.
Toggle bookmark bar now affects all open files and is remembered in the prefs.
Bookmarks can now be added/deleted by clicking on the icon in the bookmark bar.
Added a bookmark bar.
Added plea for money.
Fixed not jumping to line when selecting goto define and file is not already open.

0.0.32
Added new menu icons for 'New Editor' and 'New Admin Editor'.
Hidden languages no longer shown.
Source highlighting dropdown list now display language names properly.
Source highlighting dropdown list now definitely sorted.
Added 'Bug Reporting' link to help file as suggested.
Moved source higlighting selector to page tab from toolbar.
Fixed 'New Editor' not running as new proccess.
Fixed 'Manpage Editor' not running as new proccess.