@@ -305,10 +305,11 @@ int main(int argc,char **argv)
 #endif
 			unique_app_watch_window(app,(GtkWindow*)window);
 			g_signal_connect(app,"message-received",G_CALLBACK(messageReceived),NULL);
-			setSensitive();
 
 			if((nagScreen==false))
 				doNagScreen();
+
+			setSensitive();
 
 			gtk_main();
 		}
